# stellar-hackathon

./: .env.example  .gitignore  Cargo.toml  README.md  mcp-config.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/budget-policy/: Cargo.toml
contracts/budget-policy/src/: lib.rs
contracts/receipt-ledger/: Cargo.toml
contracts/receipt-ledger/src/: lib.rs
contracts/service-registry/: Cargo.toml
contracts/service-registry/src/: lib.rs
demo/: start-sellers.sh
demo/buyer-agent/: budget-test.ts  demo.ts  joke-call.ts
demo/joke-agent/: handler.js  handler.ts
demo/research-agent/: handler.js  handler.ts
demo/weather-agent/: handler.js  handler.ts
scripts/: deploy.sh
