[workspace]
resolver = "2"
members = [
    "contracts/service-registry",
    "contracts/budget-policy",
    "contracts/receipt-ledger",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
